home-automation-Home_Assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-automation
spec:
  type: NodePort
  ports:
  - port: 8123
    targetPort: 8123
    nodePort: 30123
    name: http
  selector:
    app: homeassistant
